syntax = "proto3";

package kong.model;

option go_package = "github.com/kong/koko/internal/gen/wrpc/kong/model;model";

message Consumer {
  string id = 1;
  string custom_id = 2;
  string username = 3;
  int32 created_at = 4;
  repeated string tags = 5;
}
